--- a/features/home/src/main/res/layout/item_crypto.xml
+++ b/features/home/src/main/res/layout/item_crypto.xml
@@ -4,24 +4,22 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:layout_marginHorizontal="16dp"
-    android:layout_marginVertical="12dp">
+    android:background="?android:attr/selectableItemBackground"
+    android:padding="@dimen/horizontal_margin_medium">
 
     <TextView
         android:id="@+id/tv_code"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        tools:text="AALI" />
+        app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
         android:id="@+id/tv_price"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        tools:text="9,050" />
+        app:layout_constraintTop_toTopOf="parent" />
 
 
     <TextView
@@ -29,14 +27,12 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/tv_code"
-        tools:text="Astra Argo Lestari Tbk." />
+        app:layout_constraintTop_toBottomOf="@+id/tv_code" />
 
     <TextView
         android:id="@+id/tv_price_change"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/tv_price"
-        tools:text="+200(+2.26%)" />
+        app:layout_constraintTop_toBottomOf="@+id/tv_price" />
 </androidx.constraintlayout.widget.ConstraintLayout>
