--- a/features/login/src/main/res/layout/layout_sosmed_btn.xml
+++ b/features/login/src/main/res/layout/layout_sosmed_btn.xml
@@ -9,7 +9,9 @@
         android:id="@+id/cl_google"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="@drawable/shape_corner_gray_4dp"
+        android:background="@drawable/selector_corner_gray"
+        android:clickable="true"
+        android:focusable="true"
         android:paddingHorizontal="@dimen/horizontal_margin_small"
         android:paddingVertical="@dimen/vertical_margin_small"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -32,6 +34,7 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="@dimen/vertical_margin_medium"
             android:text="@string/sign_in_with_google"
+            app:hintTextAppearance="@style/Body.Light"
             app:layout_constraintBottom_toBottomOf="@+id/iv_google"
             app:layout_constraintStart_toEndOf="@+id/iv_google"
             app:layout_constraintTop_toTopOf="@+id/iv_google" />
@@ -43,7 +46,9 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="@dimen/vertical_margin_small"
-        android:background="@drawable/shape_corner_gray_4dp"
+        android:background="@drawable/selector_corner_gray"
+        android:clickable="true"
+        android:focusable="true"
         android:paddingHorizontal="@dimen/horizontal_margin_small"
         android:paddingVertical="@dimen/vertical_margin_small"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -66,6 +71,7 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="16dp"
             android:text="@string/login_with_facebook"
+            app:hintTextAppearance="@style/Body.Light"
             app:layout_constraintBottom_toBottomOf="@+id/iv_facebook"
             app:layout_constraintStart_toEndOf="@+id/iv_facebook"
             app:layout_constraintTop_toTopOf="@+id/iv_facebook" />
