--- a/commons/src/main/res/values/themes.xml
+++ b/commons/src/main/res/values/themes.xml
@@ -12,5 +12,88 @@
         <item name="android:statusBarColor" tools:targetApi="l">?attr/colorPrimaryVariant</item>
         <!-- Customize your theme here. -->
     </style>
-    
+
+
+    <style name="Title">
+        <item name="android:textSize">20sp</item>
+        <item name="android:layout_width">wrap_content</item>
+        <item name="android:layout_height">wrap_content</item>
+    </style>
+
+    <style name="Caption">
+        <item name="android:textSize">12sp</item>
+        <item name="android:layout_width">wrap_content</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:includeFontPadding">false</item>
+    </style>
+
+    <style name="Body">
+        <item name="android:textSize">14sp</item>
+        <item name="android:lineSpacingExtra">6sp</item>
+        <item name="android:layout_width">wrap_content</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:includeFontPadding">false</item>
+    </style>
+
+    <style name="Body.Normal" parent="Body">
+        <item name="android:textColor">@color/black</item>
+    </style>
+
+    <style name="Body.Light" parent="Body">
+        <item name="android:textColor">@color/dark_gray</item>
+    </style>
+
+    <style name="Body.White" parent="Body">
+        <item name="android:textColor">@color/white</item>
+    </style>
+
+    <style name="Body.Primary" parent="Body">
+        <item name="android:textColor">@color/primary</item>
+    </style>
+
+
+    <style name="Body.Normal.Bold" parent="Body.Normal">
+        <item name="android:textStyle">bold</item>
+    </style>
+
+    <style name="Body.White.Bold" parent="Body.White">
+        <item name="android:textStyle">bold</item>
+    </style>
+
+    <style name="Body.Primary.Bold" parent="Body.Primary">
+        <item name="android:textStyle">bold</item>
+    </style>
+
+
+    <style name="Title.Bold" parent="Title">
+        <item name="android:textSize">20sp</item>
+        <item name="android:textStyle">bold</item>
+        <item name="android:layout_width">wrap_content</item>
+        <item name="android:layout_height">wrap_content</item>
+    </style>
+
+
+    <style name="Caption.Normal" parent="Caption">
+        <item name="android:textColor">@color/black</item>
+        <item name="android:textStyle">normal</item>
+    </style>
+
+    <style name="Caption.Light" parent="Caption">
+        <item name="android:textColor">@color/dark_gray</item>
+        <item name="android:textStyle">normal</item>
+    </style>
+
+    <style name="Caption.Primary" parent="Caption">
+        <item name="android:textColor">@color/primary</item>
+        <item name="android:textStyle">normal</item>
+    </style>
+
+    <style name="Caption.Primary.Bold" parent="Caption.Primary">
+        <item name="android:textStyle">bold</item>
+    </style>
+
+    <style name="Caption.Normal.Bold" parent="Caption.Normal">
+        <item name="android:textStyle">bold</item>
+    </style>
+
 </resources>
