--- a/features/home/src/main/res/layout/item_crypto.xml
+++ b/features/home/src/main/res/layout/item_crypto.xml
@@ -11,6 +11,7 @@
         android:id="@+id/tv_code"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        style="@style/Body.Normal.Bold"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
@@ -18,6 +19,7 @@
         android:id="@+id/tv_price"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        style="@style/Body.Normal.Bold"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
@@ -27,12 +29,14 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         app:layout_constraintStart_toStartOf="parent"
+        style="@style/Caption.Light"
         app:layout_constraintTop_toBottomOf="@+id/tv_code" />
 
     <TextView
         android:id="@+id/tv_price_change"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        style="@style/Caption.Light"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/tv_price" />
 </androidx.constraintlayout.widget.ConstraintLayout>
