--- a/features/login/src/main/res/layout/fragment_login.xml
+++ b/features/login/src/main/res/layout/fragment_login.xml
@@ -1,10 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 
-    <androidx.constraintlayout.widget.ConstraintLayout
-        xmlns:android="http://schemas.android.com/apk/res/android"
-        xmlns:app="http://schemas.android.com/apk/res-auto"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent">
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:paddingStart="@dimen/horizontal_margin_medium"
+    android:paddingEnd="@dimen/horizontal_margin_medium">
 
     <include
         android:id="@+id/layout_toolbar"
@@ -15,119 +16,126 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
-        <include
-            android:id="@+id/include_sosmed_btn"
-            layout="@layout/layout_sosmed_btn"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="@dimen/vertical_margin_medium"
-            app:layout_constraintTop_toBottomOf="@+id/layout_toolbar" />
+    <include
+        android:id="@+id/include_sosmed_btn"
+        layout="@layout/layout_sosmed_btn"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="@dimen/vertical_margin_medium"
+        app:layout_constraintTop_toBottomOf="@+id/layout_toolbar" />
 
-        <View
-            android:id="@+id/view_left"
-            android:layout_width="0dp"
-            android:layout_height="2dp"
-            android:layout_marginEnd="8dp"
-            android:background="@color/gray"
-            app:layout_constraintBottom_toBottomOf="@id/text_view_label_or"
-            app:layout_constraintEnd_toStartOf="@id/text_view_label_or"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="@id/text_view_label_or" />
+    <View
+        android:id="@+id/view_left"
+        android:layout_width="0dp"
+        android:layout_height="2dp"
+        android:layout_marginEnd="@dimen/horizontal_margin_small"
+        android:background="@color/gray"
+        app:layout_constraintBottom_toBottomOf="@id/text_view_label_or"
+        app:layout_constraintEnd_toStartOf="@id/text_view_label_or"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="@id/text_view_label_or" />
 
-        <View
-            android:id="@+id/view_right"
-            android:layout_width="0dp"
-            android:layout_height="2dp"
-            android:layout_marginStart="8dp"
-            android:background="@color/gray"
-            app:layout_constraintBottom_toBottomOf="@id/text_view_label_or"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toEndOf="@+id/text_view_label_or"
-            app:layout_constraintTop_toTopOf="@id/text_view_label_or" />
-
-        <TextView
-            android:id="@+id/text_view_label_or"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="24dp"
-            android:text="@string/or"
-            android:textColor="@android:color/darker_gray"
-            app:layout_constraintEnd_toStartOf="@id/view_right"
-            app:layout_constraintStart_toEndOf="@id/view_left"
-            app:layout_constraintTop_toBottomOf="@+id/include_sosmed_btn" />
-
-        <com.google.android.material.textfield.TextInputLayout
-            android:id="@+id/text_input_layout_email"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="20dp"
-            android:hint="@string/username_or_email"
-            app:layout_constraintTop_toBottomOf="@id/text_view_label_or">
-
-            <com.google.android.material.textfield.TextInputEditText
-                android:id="@+id/edit_text_email"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:background="@android:color/transparent"
-                android:inputType="textEmailAddress" />
-
-        </com.google.android.material.textfield.TextInputLayout>
-
-        <com.google.android.material.textfield.TextInputLayout
-            android:id="@+id/text_input_layout_password"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="8dp"
-            android:background="@android:color/transparent"
-            android:hint="@string/password"
-            app:endIconMode="password_toggle"
-            app:layout_constraintTop_toBottomOf="@id/text_input_layout_email">
-
-            <com.google.android.material.textfield.TextInputEditText
-                android:id="@+id/edit_text_password"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:background="@android:color/transparent"
-                android:inputType="textPassword" />
-
-        </com.google.android.material.textfield.TextInputLayout>
-
-        <TextView
-            android:id="@+id/text_view_forgot_password"
-            android:layout_width="wrap_content"
-            android:layout_height="0dp"
-            android:layout_marginTop="12dp"
-            android:text="@string/forgot_password"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/text_input_layout_password" />
-
-        <Button
-            android:id="@+id/button_login"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="16dp"
-            android:paddingVertical="12dp"
-            android:text="@string/label_login"
-            android:textAllCaps="false"
-            app:layout_constraintTop_toBottomOf="@id/text_view_forgot_password" />
-
-        <Button
-            android:id="@+id/button_login_fingerprint"
-            style="?attr/materialButtonOutlinedStyle"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="8dp"
-            android:paddingVertical="12dp"
-            android:text="@string/login_with_fingerprint"
-            android:textAllCaps="false"
-            android:textColor="@color/primary"
-            app:layout_constraintTop_toBottomOf="@id/button_login"
-            app:strokeColor="@color/primary" />
+    <View
+        android:id="@+id/view_right"
+        android:layout_width="0dp"
+        android:layout_height="2dp"
+        android:layout_marginStart="@dimen/horizontal_margin_small"
+        android:background="@color/gray"
+        app:layout_constraintBottom_toBottomOf="@id/text_view_label_or"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toEndOf="@+id/text_view_label_or"
+        app:layout_constraintTop_toTopOf="@id/text_view_label_or" />
 
     <TextView
+        android:id="@+id/text_view_label_or"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginVertical="16dp"
+        android:layout_marginTop="@dimen/vertical_margin_big"
+        android:text="@string/or"
+        android:textColor="@android:color/darker_gray"
+        app:layout_constraintEnd_toStartOf="@id/view_right"
+        app:layout_constraintStart_toEndOf="@id/view_left"
+        app:layout_constraintTop_toBottomOf="@+id/include_sosmed_btn" />
+
+    <com.google.android.material.textfield.TextInputLayout
+        android:id="@+id/text_input_layout_email"
+        android:layout_width="match_parent"
+        app:errorContentDescription="@string/email_not_valid"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="@dimen/vertical_margin_medium"
+        android:hint="@string/username_or_email"
+        app:hintTextAppearance="@style/Body.Light"
+        app:layout_constraintTop_toBottomOf="@id/text_view_label_or">
+
+        <com.google.android.material.textfield.TextInputEditText
+            android:id="@+id/edit_text_email"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:background="@android:color/transparent"
+            android:inputType="textEmailAddress" />
+
+    </com.google.android.material.textfield.TextInputLayout>
+
+    <com.google.android.material.textfield.TextInputLayout
+        android:id="@+id/text_input_layout_password"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="@dimen/vertical_margin_small"
+        android:background="@android:color/transparent"
+        android:hint="@string/password"
+        app:hintTextAppearance="@style/Caption.Light"
+        app:endIconMode="password_toggle"
+        app:layout_constraintTop_toBottomOf="@id/text_input_layout_email">
+
+        <com.google.android.material.textfield.TextInputEditText
+            android:id="@+id/edit_text_password"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:background="@android:color/transparent"
+            android:inputType="textPassword" />
+
+    </com.google.android.material.textfield.TextInputLayout>
+
+    <TextView
+        android:id="@+id/text_view_forgot_password"
+        android:layout_width="wrap_content"
+        android:layout_height="@dimen/dimen_0"
+        android:layout_marginTop="@dimen/vertical_margin_medium"
+        android:text="@string/forgot_password"
+        style="@style/Caption.Primary.Bold"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/text_input_layout_password" />
+
+    <Button
+        android:id="@+id/button_login"
+        style="@style/Body.White.Bold"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="@dimen/vertical_margin_medium"
+        android:paddingVertical="@dimen/vertical_margin_medium"
+        android:text="@string/label_login"
+        android:textAllCaps="false"
+        app:layout_constraintTop_toBottomOf="@id/text_view_forgot_password" />
+
+    <Button
+        android:id="@+id/button_login_fingerprint"
+        style="?attr/materialButtonOutlinedStyle"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="@dimen/vertical_margin_medium"
+        android:paddingVertical="@dimen/vertical_margin_medium"
+        android:text="@string/login_with_fingerprint"
+        android:textAllCaps="false"
+        android:textColor="@color/primary"
+        android:textStyle="bold"
+        app:layout_constraintTop_toBottomOf="@id/button_login"
+        app:strokeColor="@color/primary" />
+
+    <TextView
+        style="@style/Caption.Normal.Bold"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginVertical="@dimen/vertical_margin_medium"
         android:text="@string/label_sign_up_now"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="@+id/button_login_fingerprint"
@@ -135,4 +143,4 @@
         app:layout_constraintTop_toBottomOf="@id/button_login_fingerprint"
         app:layout_constraintVertical_bias="0.0" />
 
-    </androidx.constraintlayout.widget.ConstraintLayout>
+</androidx.constraintlayout.widget.ConstraintLayout>
