--- a/navigation/src/main/res/navigation/nav_graph_root.xml
+++ b/navigation/src/main/res/navigation/nav_graph_root.xml
@@ -2,19 +2,32 @@
 <navigation xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/nav_graph_root"
-    app:startDestination="@id/loginFragment">
+    app:startDestination="@id/splashFragment">
 
-    <fragment android:name="com.apelgigit.home.HomeFragment"
+    <fragment android:name="com.apelgigit.splash.SplashFragment"
         android:label="fragment_splash"
-        android:id="@+id/loginFragment">
+        android:id="@+id/splashFragment">
 
-    <action android:id="@+id/action_login_fragment_to_crypto_list"
-        app:destination="@id/nav_graph_crypto_watch_list"
+    <action android:id="@+id/action_splash_fragment_to_login_fragment"
+        app:destination="@id/nav_graph_login"
         app:enterAnim="@anim/fragment_open_enter"
-        app:popExitAnim="@anim/fragment_close_exit">
+        app:popExitAnim="@anim/fragment_close_exit"
+        app:popUpTo="@id/splashFragment"
+        app:popUpToInclusive="true"
+        >
     </action>
+
+        <action android:id="@+id/action_splash_fragment_to_watch_list_fragment"
+            app:destination="@id/nav_graph_crypto_watch_list"
+            app:enterAnim="@anim/fragment_open_enter"
+            app:popExitAnim="@anim/fragment_close_exit"
+            app:popUpTo="@id/splashFragment"
+            app:popUpToInclusive="true"
+            >
+        </action>
        </fragment>
 
+    <include app:graph="@navigation/nav_graph_login"/>
     <include app:graph="@navigation/nav_graph_crypto_watch_list"/>
 
 </navigation>
